updated swagger file
