# climbtime/swagger.json
@@ -22,6 +22,38 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "rockType": {
+                  "example": "any"
+                },
+                "approachTime": {
+                  "example": "any"
+                },
+                "style": {
+                  "example": "any"
+                },
+                "gradeRange": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -54,6 +86,36 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "rockType": {
+                  "example": "any"
+                },
+                "approachTime": {
+                  "example": "any"
+                },
+                "style": {
+                  "example": "any"
+                },
+                "gradeRange": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
